# ha-faikout-firmware

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  validate.yml
custom_components/faikout/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  manifest.json  quality_scale.yaml  strings.json
custom_components/faikout/ota/: __init__.py  client.py  exceptions.py  manifest.py  parser.py
docs/superpowers/plans/: 2026-07-06-faikout-firmware-update-integration.md  2026-07-06-faikout-firmware-version-library.md
docs/superpowers/specs/: 2026-07-06-faikout-firmware-update-integration-design.md  2026-07-06-faikout-firmware-version-library-design.md
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_const.py  test_coordinator.py  test_device_tracker.py  test_diagnostics.py  test_e2e.py  test_init.py  test_ota_client.py  test_ota_manifest.py  test_ota_parser.py
