[project]
name = "faikout-hacs"
version = "0.1.0"
description = "Home Assistant integration: firmware-update-available sensor for Faikout devices."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["network: tests that hit the live OTA server (skipped when offline)"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
files = ["custom_components/faikout"]

[[tool.mypy.overrides]]
module = "custom_components.faikout.ota.*"
strict = true

[tool.coverage.run]
branch = true
source = ["custom_components/faikout"]

[tool.coverage.report]
show_missing = true
